unpackaged/main/default/objects/Comision__c/Comision__c.object-meta.xml
<CustomObject>
    <label>Comisión</label>
    <nameField>
        <label>NombreObjeto</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Comisiones</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>