unpackaged/main/default/objects/Comision__c/fields/Approval_Obj_Type__c.field-meta.xml
<CustomField>
    <fullName>Approval_Obj_Type__c</fullName>
    <label>Tipo de Aprobación</label>
    <length>100</length>
    <type>Text</type>
</CustomField>