unpackaged/main/default/objects/Comision__c/fields/Approval_Object_Fracc_Name__c.field-meta.xml
<CustomField>
    <fullName>Approval_Object_Fracc_Name__c</fullName>
    <label>Fraccionamiento</label>
    <length>100</length>
    <type>Text</type>
</CustomField>