unpackaged/main/default/objects/Comision__c/fields/Codigo__c.field-meta.xml
<CustomField>
    <fullName>Codigo__c</fullName>
    <label>Codigo</label>
    <length>50</length>
    <type>Text</type>
</CustomField>