unpackaged/main/default/objects/Comision__c/fields/Etapa_de_Venta__c.field-meta.xml
<CustomField>
    <fullName>Etapa_de_Venta__c</fullName>
    <label>Etapa de Venta</label>
    <length>200</length>
    <type>Text</type>
</CustomField>