unpackaged/main/default/objects/Comision__c/fields/Fecha__c.field-meta.xml
<CustomField>
    <fullName>Fecha__c</fullName>
    <defaultValue>Today()</defaultValue>
    <label>Fecha</label>
    <type>Date</type>
</CustomField>