unpackaged/main/default/objects/Comision__c/fields/Forma_Pago__c.field-meta.xml
<CustomField>
    <fullName>Forma_Pago__c</fullName>
    <label>Periodo de Pago</label>
    <length>50</length>
    <type>Text</type>
</CustomField>