unpackaged/main/default/objects/Comision__c/fields/ID_Empleado__c.field-meta.xml
<CustomField>
    <fullName>ID_Empleado__c</fullName>
    <label>ID Empleado</label>
    <length>100</length>
    <type>Text</type>
</CustomField>