unpackaged/main/default/objects/Comision__c/fields/Meta_Equipo__c.field-meta.xml
<CustomField>
    <fullName>Meta_Equipo__c</fullName>
    <label>Meta Equipo</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>