unpackaged/main/default/objects/Comision__c/fields/Meta_Individual__c.field-meta.xml
<CustomField>
    <fullName>Meta_Individual__c</fullName>
    <label>Meta Individual</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>