unpackaged/main/default/objects/Comision__c/fields/Miembros_Equipo__c.field-meta.xml
<CustomField>
    <fullName>Miembros_Equipo__c</fullName>
    <label>Miembros Equipo</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>