unpackaged/main/default/objects/Comision__c/fields/No_Cedula__c.field-meta.xml
<CustomField>
    <fullName>No_Cedula__c</fullName>
    <label>No Cédula</label>
    <length>200</length>
    <type>Text</type>
</CustomField>