unpackaged/main/default/objects/Comision__c/fields/No_Equipo__c.field-meta.xml
<CustomField>
    <fullName>No_Equipo__c</fullName>
    <label>No Equipo</label>
    <length>200</length>
    <type>Text</type>
</CustomField>