unpackaged/main/default/objects/Comision__c/fields/Nombre_Equipo__c.field-meta.xml
<CustomField>
    <fullName>Nombre_Equipo__c</fullName>
    <label>Nombre Equipo</label>
    <length>200</length>
    <type>Text</type>
</CustomField>