unpackaged/main/default/objects/Comision__c/fields/Nombre_Plan_de_Bonos__c.field-meta.xml
<CustomField>
    <fullName>Nombre_Plan_de_Bonos__c</fullName>
    <label>Nombre Plan de Bonos</label>
    <length>100</length>
    <type>Text</type>
</CustomField>