unpackaged/main/default/objects/Comision__c/fields/Nombre_Plan_de_Ventas__c.field-meta.xml
<CustomField>
    <fullName>Nombre_Plan_de_Ventas__c</fullName>
    <label>Nombre Plan de Ventas</label>
    <length>200</length>
    <type>Text</type>
</CustomField>