unpackaged/main/default/objects/Comision__c/fields/Objeto_a_Aprobar__c.field-meta.xml
<CustomField>
    <fullName>Objeto_a_Aprobar__c</fullName>
    <externalId>true</externalId>
    <label>Objeto a Aprobar</label>
    <length>200</length>
    <type>Text</type>
</CustomField>