unpackaged/main/default/objects/Comision__c/fields/Pct_Base_Senior__c.field-meta.xml
<CustomField>
    <fullName>Pct_Base_Senior__c</fullName>
    <label>% Base Senior</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>