unpackaged/main/default/objects/Comision__c/fields/Pct_Cumplimiento_Master__c.field-meta.xml
<CustomField>
    <fullName>Pct_Cumplimiento_Master__c</fullName>
    <label>% Cumplimiento Master</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>