unpackaged/main/default/objects/Comision__c/fields/Pct_Pago__c.field-meta.xml
<CustomField>
    <fullName>Pct_Pago__c</fullName>
    <label>% Pago</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>