unpackaged/main/default/objects/Comision__c/fields/Periodo_de_Pago__c.field-meta.xml
<CustomField>
    <fullName>Periodo_de_Pago__c</fullName>
    <label>Periodo de Pago</label>
    <length>200</length>
    <type>Text</type>
</CustomField>