unpackaged/main/default/objects/Comision__c/fields/Proceso_de_Aprobacion_Activo__c.field-meta.xml
<CustomField>
    <fullName>Proceso_de_Aprobacion_Activo__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Proceso de Aprobación Activo</label>
    <type>Checkbox</type>
</CustomField>