unpackaged/main/default/objects/Comision__c/fields/Rol_Ventas__c.field-meta.xml
<CustomField>
    <fullName>Rol_Ventas__c</fullName>
    <label>Rol Ventas</label>
    <length>200</length>
    <type>Text</type>
</CustomField>