unpackaged/main/default/objects/Comision__c/fields/Solicitante_Buscar__c.field-meta.xml
<CustomField>
    <fullName>Solicitante_Buscar__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Solicitante</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Comisiones1</relationshipName>
    <type>Lookup</type>
</CustomField>