unpackaged/main/default/objects/Comision__c/fields/Token__c.field-meta.xml
<CustomField>
    <fullName>Token__c</fullName>
    <label>Token</label>
    <length>50</length>
    <type>Text</type>
</CustomField>