unpackaged/main/default/objects/Comision__c/fields/Total_a_Pagar__c.field-meta.xml
<CustomField>
    <fullName>Total_a_Pagar__c</fullName>
    <label>Total a Pagar</label>
    <summarizedField>Prospectador_Asesor_de_Comision__c.Total_a_Pagar__c</summarizedField>
    <summaryForeignKey>Prospectador_Asesor_de_Comision__c.Comision_Buscar__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>