unpackaged/main/default/objects/Comision__c/fields/Total_Canceladas__c.field-meta.xml
<CustomField>
    <fullName>Total_Canceladas__c</fullName>
    <label>Total Canceladas</label>
    <summarizedField>Prospectador_Asesor_de_Comision__c.Cantidad_Canceladas__c</summarizedField>
    <summaryForeignKey>Prospectador_Asesor_de_Comision__c.Comision_Buscar__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>