unpackaged/main/default/objects/Comision__c/fields/Total_Formalizadas__c.field-meta.xml
<CustomField>
    <fullName>Total_Formalizadas__c</fullName>
    <label>Total Formalizadas</label>
    <summarizedField>Prospectador_Asesor_de_Comision__c.Cantidad_Formalizadas__c</summarizedField>
    <summaryForeignKey>Prospectador_Asesor_de_Comision__c.Comision_Buscar__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>