unpackaged/main/default/objects/Comision__c/recordTypes/Base_Comisiones_Asesores.recordType-meta.xml
<RecordType>
    <fullName>Base_Comisiones_Asesores</fullName>
    <active>true</active>
    <description>Base Comisiones Asesores</description>
    <label>Base Comisiones Asesores</label>
</RecordType>