unpackaged/main/default/objects/Comision__c/recordTypes/Base_Comisiones_Prospectadores.recordType-meta.xml
<RecordType>
    <fullName>Base_Comisiones_Prospectadores</fullName>
    <active>true</active>
    <description>Base Comisiones Prospectadores</description>
    <label>Base Comisiones Prospectadores</label>
</RecordType>