unpackaged/main/default/objects/Comision__c/recordTypes/Base_Plan_de_Bonos.recordType-meta.xml
<RecordType>
    <fullName>Base_Plan_de_Bonos</fullName>
    <active>true</active>
    <description>Base Plan de Bonos</description>
    <label>Base Plan de Bonos</label>
</RecordType>