unpackaged/main/default/objects/Comision__c/recordTypes/Comisiones_Asesores.recordType-meta.xml
<RecordType>
    <fullName>Comisiones_Asesores</fullName>
    <active>true</active>
    <description>Comisiones Asesores</description>
    <label>Comisiones Asesores</label>
</RecordType>