unpackaged/main/default/objects/Comision__c/recordTypes/Comisiones_Prospectadores.recordType-meta.xml
<RecordType>
    <fullName>Comisiones_Prospectadores</fullName>
    <active>true</active>
    <description>Comisiones Prospectadores</description>
    <label>Comisiones Prospectadores</label>
</RecordType>