unpackaged/main/default/objects/Comision__c/recordTypes/Plan_Bono_1_Col_Javer.recordType-meta.xml
<RecordType>
    <fullName>Plan_Bono_1_Col_Javer</fullName>
    <active>true</active>
    <description>Plan Bono_Col. Javer</description>
    <label>Plan Bono_Col. Javer</label>
</RecordType>