unpackaged/main/default/objects/Comision__c/recordTypes/Plan_Bono_Asesor.recordType-meta.xml
<RecordType>
    <fullName>Plan_Bono_Asesor</fullName>
    <active>true</active>
    <description>Plan Bono Asesor</description>
    <label>Plan Bono Asesor</label>
</RecordType>