unpackaged/main/default/objects/Comision__c/recordTypes/Plan_Bono_Prospectador.recordType-meta.xml
<RecordType>
    <fullName>Plan_Bono_Prospectador</fullName>
    <active>true</active>
    <description>Plan Bono Prospectador</description>
    <label>Plan Bono Prospectador</label>
</RecordType>